--- a/study/class.html
+++ b/study/class.html
@@ -20,21 +20,15 @@
 
     // 尝试通过类定义的写法
     class Test extends React.Component {
-        constructor(props) {
-            super(props);
-            this.state = {isHot: true}
-        }
+        state = {isHot: true}
 
         modify() {
-           // this.state.isHot = !this.state.isHot
             let hot = !this.state.isHot;
-            console.log(hot)
-            this.state={isHot: hot}
-            console.log(this.state)
+            this.setState({isHot: hot})
         }
 
         render() {
-            return <span onClick={()=>this.modify()}>hello word class {this.state.isHot ? "真的" : "骄傲的"}</span>
+            return <span onClick={() => this.modify()}>hello word class {this.state.isHot ? "真的" : "骄傲的"}</span>
         }
     }
 
